[package]
name = "bmap-parser"
version = "0.2.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT AND Apache-2.0"
description = "bmap-parser is a library for Rust that allows you to copy files or flash block devices safely"
repository = "https://github.com/collabora/bmap-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
quick-xml = { version = "0.37", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
anyhow = { version = "1.0", optional = true }
sha2 = "0.10"
strum = { version = "0.27", features = [ "derive"] }
digest = "0.10"
flate2 = "1.1"
futures = "0.3"
